[package]
name = "dvach"
version = "0.1.1"
authors = ["TatriX <tatrics@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "dvach a simple client cli tool for the 2ch.hk imageboard"
readme = "README.md"
homepage = "https://github.com/TatriX/dvach"
repository = "https://github.com/TatriX/dvach"
keywords = ["cli", "2ch", "imageboard"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = "0.9.22"
structopt = "0.3.5"
serde = "1.0.103"
serde_json = "1.0.42"
serde_derive = "1.0.103"
log = "0.4.8"
env_logger = "0.7.1"
scraper = "0.11.0"
textwrap = "0.11.0"
colored = "1.9.0"
cursive = "0.13.0"
